[tool.poetry]
name = "stochastic-vehicle-routing"
version = "0.1.0"
description = ""
authors = ["Rohan Devraj <rdevraj3105@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Pyomo = "^6.8.0"
numpy = "^2.1.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
